# greenlet-scheduler

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  carbon-schedulerConfig.cmake  vcpkg-configuration.json  vcpkg.json
cmake/: CcpBuildConfigurations.cmake  CcpDocsGenerator.cmake  CcpGlobalSettings.cmake  CcpMinimumTargetPlatform.cmake  CcpPacIdentifiers.cmake  CcpTargetConfigurations.cmake  CcpVendorUtilities.cmake  PyTestDiscoverTests.cmake
cmake/internal/: PyTestDiscoverTestsImpl.cmake
cmake/triplets/: arm64-osx-carbon.cmake  universal-osx-carbon.cmake  x64-osx-carbon.cmake  x64-windows-carbon.cmake
doc/: RunSphinx.bat
doc/source/: cApi.rst  conf.py  conf.py.in  designDocuments.rst  examples.rst  guides.rst  index.rst  installation.rst  pythonApi.rst
doc/source/designDocuments/: memoryDesign.rst  nestedTaskletsVsFlatSchedulingQueue.rst  originalDesignBrief.rst  stacklessDivergence.rst
doc/source/examples/: exampleUsages.rst  schedulingInASimpleGameLoop.rst
doc/source/guides/: alteringChannelBehaviour.rst  howExceptionsAreManaged.rst  killingTasklets.rst  manualControlScheduling.rst  queryingChannelState.rst  schedulingAcrossMultiplePythonThreads.rst  sendingDataBetweenTaskletsUsingChannels.rst  understandingTaskletScheduleOrder.rst  usingSchedulerFromC.rst  whatIsATasklet.rst  yieldingFromATasklet.rst
doc/source/pythonApi/: channel.rst  scheduleManager.rst  tasklet.rst
include/: Scheduler.h
python/scheduler/: __init__.py  discover.py
python/scheduler/StacklessTests/: runAll.py  support.py  test_capi.py  test_chan_cb.py  test_channel.py  test_exception.py  test_pickle.py  test_sched_cb.py  test_tstate.py  test_watchdog.py
python/scheduler/tests/: support.py  test_channel.py  test_miscell.py  test_outside.py  test_queuechannel.py  test_scheduler.py  test_tasklet.py  test_utils.py
python/schedulerext/: __init__.py  _queuechannel.py  _util.py
src/: Channel.cpp  Channel.h  PyChannel.cpp  PyChannel.h  PyChannel_python.cpp  PyScheduleManager.cpp  PyScheduleManager.h  PyScheduler.cpp  PyScheduler.h  PyScheduler_python.cpp  PyTasklet.cpp  PyTasklet.h  PyTasklet_python.cpp  PythonCppType.cpp  PythonCppType.h  ScheduleManager.cpp  ScheduleManager.h  Scheduler.cpp  Scheduler.h  SchedulerModule.cpp  SchedulerModule.h  Tasklet.cpp  Tasklet.h  stdafx.h
stackless-compat-layer/: stackless.h
tests/capiTest/: CMakeLists.txt  Channel.cpp  InterpreterWithSchedulerModule.cpp  InterpreterWithSchedulerModule.h  PackagePaths.h.in  Scheduler.cpp  StdAfx.h  Tasklet.cpp
tests/cpp/: CMakeLists.txt  SchedulerTestModule.cpp  SchedulerTestModule.h  stdafx.h
tests/python/scheduler/: discover.py
tests/python/scheduler/tests/: test_channel.py  test_queuechannel.py  test_scheduler.py  test_tasklet.py  test_utils.py
